Add Source Yoga class

--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
         </p>
       </div>
 
+      <div class="meta uppercase">
+        <h3 class="meta__item meta__item--headline">
+          <span class="unbreakable">Fridays 6:00 – 7:30pm</span>
+        </h3>
+        <p class="meta__item">
+          <a class="unbreakable" href="http://www.thesourceyogastudio.com/home.html">The Source Yoga Studio</a> <br />
+          <a class="meta__link" href="https://www.google.com/maps/place/13339+Madison+Ave,+Lakewood,+OH+44107/@41.4768721,-81.7854801,17z/">
+            <span class="unbreakable">13339 Madison Ave</span> <br />
+            <span class="unbreakable">Lakewood, OH 44107</span>
+          </a>
+        </p>
+        <p class="meta__item">
+          <span class="unbreakable">Drop in $13</span>
+        </p>
+      </div>
+
       <div class="content">
         <p>Sivananda Classical Hatha Yoga is a traditional practice based on the Five Points of Yoga including proper exercise, proper breathing, proper relaxation, proper diet, and meditation/positive thinking.</p>
         <p>The physical practice combines meditation, breath work, and asanas to provide healing to the body, mind, and spirit.</p>
