Rework reiki session
To make it more :corn:sistent with yoga classes

--- a/index.html
+++ b/index.html
@@ -117,12 +117,20 @@
       <h2 class="headline inverted uppercase program__title">Reiki</h2>
 
       <div class="meta uppercase">
-        <p class="meta__item">
+        <h3 class="meta__item meta__item--headline">
           <span class="unbreakable">By appointment only</span>
-          <span class="unbreakable">@ Unity Spiritual Center</span>
-          <span class="unbreakable">— evenings and weekends available</span>
+        </h3>
+        <p class="meta__item">
+          <span class="unbreakable">Evenings and weekends available</span>
         </p>
-        <p class="meta__item">$75 — 1 hour healing and relaxation session</p>
+        <p class="meta__item">
+          <a class="unbreakable" href="http://www.centeredwellness.org/Classes-Events.html">Unity Spiritual Center</a> <br />
+          <a class="meta__link" href="https://www.google.com/maps/place/23855+Detroit+Rd,+Westlake,+OH+44145/@41.470471,-81.8930012,15z/">
+            <span class="unbreakable">23855 Detroit Rd</span> <br />
+            <span class="unbreakable">Westlake, OH 44145</span>
+          </a>
+        </p>
+        <p class="meta__item">1 hour healing and relaxation session $75</p>
         <p class="meta__item">Monthly packages are available</p>
       </div>
 
