Remove starting date from a yoga class

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 
       <div class="meta uppercase">
         <h3 class="meta__item meta__item--headline">
-          <span class="unbreakable">Tuesdays 6:00 – 7:30pm,</span>
-          <span class="unbreakable">starting May 3rd</span>
+          <span class="unbreakable">Tuesdays 6:00 – 7:30pm</span>
         </h3>
         <p class="meta__item">
           <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">Ideal Wellness</a> <br />
