Add Acenda Thursdee class

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
 
       <div class="meta uppercase">
         <h3 class="meta__item meta__item--headline">
+          <span class="unbreakable">Thursdays 12:00 – 1:15pm</span>
+        </h3>
+        <p class="meta__item">
+          <a class="unbreakable" href="http://www.acendayoga.com">Acenda Yoga</a> <br />
+          <a class="meta__link" href="https://www.google.com/maps/place/17305+Madison+Ave,+Lakewood,+OH+44107/@41.4774351,-81.819285,17z/">
+            <span class="unbreakable">17305 Madison Ave</span> <br />
+            <span class="unbreakable">Lakewood, OH 44107</span>
+          </a>
+        </p>
+      </div>
+
+      <div class="meta uppercase">
+        <h3 class="meta__item meta__item--headline">
           <span class="unbreakable">Fridays 6:00 – 7:30pm</span>
         </h3>
         <p class="meta__item">
