Add upcoming workshops button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   <div class="sanskrit"></div>
 </header>
 
+<div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
+  <a class="callToAction" href="#events">
+    <span class="unbreakable">New! View Upcoming Workshops</span>
+  </a>
+</div>
+
 <div class="gridCell--row program__row">
 
   <!-- COL A -------------->
