Tweak iRest event markup

--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
         <li>Improved interpersonal relations </li>
         <li>Increased inner peace and well-being</li>
       </ul>
-      <h3 class="headline inverted">About the Instructor</h3>
-      <p>Renee Sharpless</p>
+      <h3 class="headline inverted">About the Instructor, Renee Sharpless</h3>
       <ul class="basicList">
         <li>iRest® Level I Teacher-in-Training</li>
         <li>500RYT</li>
@@ -216,11 +215,11 @@
             <span class="unbreakable">$25 per participant.</span> <br /> Pre-registration and pre-payment are required.
           </p>
           <p>
-            <a target="_blank" href="https://docs.google.com/a/premahealingcleveland.com/forms/d/1gSQVDooL5APuI8rpdHnCSUsH2HIUsZRxDBLsE2TKjjw/viewform">
+            <a class="callToAction callToAction--compact" target="_blank" href="https://docs.google.com/a/premahealingcleveland.com/forms/d/1gSQVDooL5APuI8rpdHnCSUsH2HIUsZRxDBLsE2TKjjw/viewform">
               Register Here
             </a>
           </p>
-          <p>
+          <div class="gridCell--row gridCell--row--justifyCenter">
             <!-- Straight Outta PayPal -->
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
               <input type="hidden" name="cmd" value="_s-xclick">
@@ -229,7 +228,7 @@
               <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
               <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
             </form>
-          </p>
+          </div>
         </div>
       </div>
     </footer>
