Remove pre-payment requirement.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
         <div class="content gridCell--col gridCell--half-col">
           <p>
-            <span class="unbreakable">$25 per participant.</span> <br /> Pre-registration and pre-payment are required.
+            <span class="unbreakable">$25 per participant.</span> <br /> Pre-registration is required.
           </p>
           <p>
             <a class="callToAction callToAction--compact" target="_blank" href="https://docs.google.com/a/premahealingcleveland.com/forms/d/1gSQVDooL5APuI8rpdHnCSUsH2HIUsZRxDBLsE2TKjjw/viewform">
