Add another Acenda time

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="meta uppercase">
         <h3 class="meta__item meta__item--headline">
-          <span class="unbreakable">Thursdays 12:00 – 1:15pm</span>
+          <span class="unbreakable">Thursdays 12:00 – 1:15pm &amp; 6:00 – 7:00pm</span>
         </h3>
         <p class="meta__item">
           <a class="unbreakable" href="http://www.acendayoga.com">Acenda Yoga</a> <br />
