Really quickly add banner

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
 </header>
 
 <div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
-  <a class="callToAction" href="#events">
-    <span class="unbreakable">New! View Upcoming Workshops</span>
-  </a>
+  <div class="callToAction">
+    <span class="unbreakable">FREE YOGA</span>
+    <br />
+    <span class="unbreakable">Saturday August 6th</span>
+    <span class="unbreakable">8:45 &ndash; 9:45am</span>
+    <br />
+    <span class="unbreakable">Unity Spiritual Center - Westlake</span>
+    <span class="unbreakable">23855 Detroit Rd.</span>
+  </div>
 </div>
 
 <div class="gridCell--row program__row">
