--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 
 <!-- HEADER -------------->
 <div class="pageHeader__logo"></div>
-<header class="pageHeader"><a href="index.html">
-  <h1 class="headline pageHeader__headline align--center">
-    <span class="headline__line pageHeader__primary inverted">Prema Healing</span>
-    <span class="headline__line pageHeader__secondary">Cleveland</span>
-  </h1></a>
+<header class="pageHeader">
+  <a href="index.html" class="pageHeader__link">
+    <h1 class="headline pageHeader__headline align--center">
+      <span class="headline__line pageHeader__primary inverted">Prema Healing</span>
+      <span class="headline__line pageHeader__secondary">Cleveland</span>
+    </h1>
+  </a>
   <div class="sanskrit"></div>
 </header>
 
