--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
       <div class="meta uppercase">
         <h3 class="meta__item meta__item--headline">
-          <span class="unbreakable">Thursdays 12:00 – 1:15pm &amp; 6:00 – 7:00pm</span>
+          <span class="unbreakable">Thursdays 12:00 – 1:15pm &amp;</span>
+          <span class="unbreakable">6:00 – 7:00pm</span>
         </h3>
         <p class="meta__item">
           <a class="unbreakable" href="http://www.acendayoga.com">Acenda Yoga</a> <br />
@@ -170,7 +171,10 @@
     <header>
       <h2 class="headline inverted">
         <span class="headline__line">iRest® Yoga Nidra Workshop</span>
-        <span class="headline__line">Sunday, September 25th, 10:00 – 11:30am</span>
+        <span class="headline__line">
+          <span class="unbreakable">Sunday, September 25th,</span>
+          <span class="unbreakable">10:00 – 11:30am</span>
+        </span>
       </h2>
     </header>
     <div class="content">
