Ron's updates - Update class dates
Updated iRest workshop dates, address and new sign up form link. Removed "ALL CLASSES ARE ON HOLD" headline.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
       <h2 class="headline inverted uppercase program__title">Yoga</h2>
 
       <div class="meta uppercase">
-        <span class="meta__item--headline">
-          All classes are on hold and will resume on
-          <span class="unbreakable">September 27th</span>.
-        </span>
         <a class="unbreakable" href="http://www.facebook.com/premahealingcleveland">
           Follow us on Facebook
         </a>
@@ -172,8 +168,8 @@
       <h2 class="headline inverted">
         <span class="headline__line">iRest® Yoga Nidra Workshop</span>
         <span class="headline__line">
-          <span class="unbreakable">Sunday, September 25th,</span>
-          <span class="unbreakable">10:00 – 11:30am</span>
+          <span class="unbreakable">Saturday, October 29th,</span>
+          <span class="unbreakable">11:00 – 12:30pm</span>
         </span>
       </h2>
     </header>
@@ -205,14 +201,12 @@
         <div class="gridCell--col gridCell--half-col">
           <div class="meta uppercase">
             <h4 class="meta__item meta__item--headline">
-              September 25th, 10:00 – 11:30am
+              October 29th, 11:00 – 12:30pm
             </h4>
             <p class="meta__item">
-              <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">The Ideal Method</a> <br />
-              <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/@41.3829587,-81.6580515,14z/">
-                <span class="unbreakable">6595 Brecksville Rd #3</span> <br />
-                <span class="unbreakable">Independence, OH 44131</span>
-              </a>
+              <a class="unbreakable" href="http://www.unityspiritualcenter.com/">Unity Spiritual Center</a> <br />
+                <span class="unbreakable">23855 Detroit Rd</span> <br />
+                <span class="unbreakable">Cleveland, OH 44145</span>
             </p>
           </div>
         </div>
@@ -223,7 +217,7 @@
             Pre-registration is required.
           </p>
           <p>
-            <a class="callToAction callToAction--compact" target="_blank" href="https://docs.google.com/a/premahealingcleveland.com/forms/d/e/1FAIpQLScf_CdYCeFDMuVWB4e8SjnRKs-fytCyKlW-ybmOCoIZ5pQ_3A/viewform">
+            <a class="callToAction callToAction--compact" target="_blank" href=" https://docs.google.com/a/premahealingcleveland.com/forms/d/e/1FAIpQLSfASNL8IgX4RJUojKo-nyqO-XCSvO3kV3HlnE1I9Xr4LX0L1g/viewform">
               Register Here
             </a>
           </p>
