--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
               October 29th, 11:00 – 12:30pm
             </h4>
             <p class="meta__item">
-              <a class="unbreakable" href="http://www.unityspiritualcenter.com/">Unity Spiritual Center</a> <br />
-                <span class="unbreakable">23855 Detroit Rd</span> <br />
-                <span class="unbreakable">Cleveland, OH 44145</span>
+              <span class="unbreakable">Unity Spiritual Center></span> <br />
+              <span class="unbreakable">23855 Detroit Rd</span> <br />
+              <span class="unbreakable">Cleveland, OH 44145</span>
             </p>
           </div>
         </div>
