--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
           <span class="unbreakable">Saturday, October 29th,</span>
           <span class="unbreakable">11:00 – 12:30pm</span>
         </span>
+        <span class="headline__line">
+          <span class="unbreakable">Sunday, October 30th,</span>
+          <span class="unbreakable">10:00 – 11:30am</span>
+        </span>
       </h2>
     </header>
     <div class="content">
