Style events form

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 </div>
 
-<div id="events" class="gridCell--col gridCell--padded">
+<div id="events" class="events gridCell--col gridCell--padded">
   <article class="event">
     <header>
       <h2 class="headline inverted">
@@ -201,7 +201,7 @@
       <p>As the founder of Prema Healing Cleveland, Renee transitioned from seven years on the road as a rock-and-roll tour manager to a dedicated practitioner of yoga, meditation, and reiki. After realizing the deep benefits first hand, Renee chose to move forward in helping others regain their own personal strength and healing modalities. Prema Healing Cleveland holds space in Independence, Westlake, and Lakewood.</p>
     </div>
     <footer>
-      <div class="gridCell--row">
+      <div class="event__form gridCell--row">
         <div class="gridCell--col gridCell--half-col">
           <div class="meta uppercase">
             <h4 class="meta__item meta__item--headline">
@@ -236,7 +236,7 @@
           </div>
         </div>
       </div>
-      <div class="gridCell--row">
+      <div class="event__form gridCell--row">
         <div class="gridCell--col gridCell--half-col">
           <div class="meta uppercase">
             <h4 class="meta__item meta__item--headline">
