created top FB button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <a href="#events" class="callToAction">
     View Upcoming Workshops
   </a>
+  <a href="http://www.facebook.com/premahealingcleveland" class="callToAction">
+    Follow Us On Facebook
+  </a>
 </div>
 
 <div class="gridCell--row program__row">
@@ -46,13 +49,6 @@
     <article class="program">
 
       <h2 class="headline inverted uppercase program__title">Yoga</h2>
-
-      <div class="meta uppercase">
-        <a class="unbreakable" href="http://www.facebook.com/premahealingcleveland">
-          Follow us on Facebook
-        </a>
-        for the most <span class="unbreakable">up-to-date</span> info!
-      </div>
 
       <div class="meta uppercase">
         <h3 class="meta__item meta__item--headline">
