Write buttonGroup styles
Pretty crappy styles but just getting the job done for now.

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
 </header>
 
 <div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
-  <a href="#events" class="callToAction">
-    View Upcoming Workshops
-  </a>
-  <a href="http://www.facebook.com/premahealingcleveland" class="callToAction">
-    Follow Us On Facebook
-  </a>
+  <div class="buttonGroup">
+    <a href="#events" class="callToAction">
+      View Upcoming Workshops
+    </a>
+    <a href="http://www.facebook.com/premahealingcleveland" class="callToAction">
+      Follow Us On Facebook
+    </a>
+  </div>
 </div>
 
 <div class="gridCell--row program__row">
