Class is cancelled!!
Added an h2 element as a temporary “class cancelled” headline.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </h1>
   </a>
   <div class="sanskrit"></div>
+  <h2 class="attention">Please note, tonight's 6:30pm 10/19 class in Westlake has been cancelled. Email renee@premahealingcleveland.com with any questions and we'll see you next week. Thank you.</h2>
 </header>
 
 <div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
