--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <li>Shamanic Reiki Master</li>
       </ul>
       <p>As the founder of Prema Healing Cleveland, Renee transitioned from seven years on the road as a rock-and-roll tour manager to a dedicated practitioner of yoga, meditation, and reiki. After realizing the deep benefits first hand, Renee chose to move forward in helping others regain their own personal strength and healing modalities. Prema Healing Cleveland holds space in Independence, Westlake, and Lakewood.</p>
-      <h3 class="cancel">* Upcoming Yoga Nidra workshops have been cancelled due to lack of pre-registration</h3>
+      <h3 class="cancel">* Upcoming Yoga Nidra workshops have been cancelled due to lack of pre-registration. Please check back soon!</h3>
     </div>
   </article>
 </div>
