Fine tuned Yoga Nidra cancellation
Got rid of more obsolete dates. Moved cancellation notice further up on
page. Commented out some code instead of deleting it so I can easily
reuse it again when cancelled workshops resume.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 <div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
   <div class="buttonGroup">
-    <a href="#events" class="callToAction">
+    <!-- <a href="#events" class="callToAction">
       View Upcoming Workshops
-    </a>
+    </a> -->
     <a href="http://www.facebook.com/premahealingcleveland" class="callToAction">
       Follow Us On Facebook
     </a>
@@ -165,14 +165,15 @@
     <header>
       <h2 class="headline inverted">
         <span class="headline__line">iRest® Yoga Nidra Workshop</span>
-        <span class="headline__line">
+        <h3 class="cancel">* Upcoming Yoga Nidra workshops have been cancelled due to lack of registration. Please check back soon!</h3>
+        <!-- <span class="headline__line">
           <span class="unbreakable">Saturday, October 29th,</span>
           <span class="unbreakable">11:00 – 12:30pm</span>
         </span>
         <span class="headline__line">
           <span class="unbreakable">Sunday, October 30th,</span>
           <span class="unbreakable">10:00 – 11:30am</span>
-        </span>
+        </span> -->
       </h2>
     </header>
     <div class="content">
@@ -197,7 +198,6 @@
         <li>Shamanic Reiki Master</li>
       </ul>
       <p>As the founder of Prema Healing Cleveland, Renee transitioned from seven years on the road as a rock-and-roll tour manager to a dedicated practitioner of yoga, meditation, and reiki. After realizing the deep benefits first hand, Renee chose to move forward in helping others regain their own personal strength and healing modalities. Prema Healing Cleveland holds space in Independence, Westlake, and Lakewood.</p>
-      <h3 class="cancel">* Upcoming Yoga Nidra workshops have been cancelled due to lack of pre-registration. Please check back soon!</h3>
     </div>
   </article>
 </div>
