Temporary class cancellation
Added a “cancelled” notice at the top of the page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <div class="sanskrit"></div>
 </header>
 
+<h3 class="cancel align--center">* Class will be cancelled on Tuesday [11/15] due to private rental of the studio. Thank you!</h3>
+
 <div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
   <div class="buttonGroup">
     <a href="#events" class="callToAction">
