Add yoga nidra sound bath event

--- a/index.html
+++ b/index.html
@@ -276,6 +276,53 @@
     </footer>
 
   </article>
+
+  <article class="event">
+    <header>
+      <h2 class="headline inverted">
+        <span class="headline__line">iRest® Yoga Nidra Guided Meditation with Healing Sound Bath</span>
+        <span class="headline__line">
+          <span class="unbreakable">Saturday, December 10th,</span>
+          <span class="unbreakable">11:00am – 12:15pm</span>
+        </span>
+      </h2>
+    </header>
+    <div class="content">
+      <p>Join Renee and Carol for this wonderful practice of guided meditation and sound therapy including Crystal and Tibetan Bowls, chimes and Gong.
+Combining the therapeutic frequencies and vibrations of sound along with Integrative Restoration® relaxation, participants will enjoy the benefits of psychological, physical, and spiritual healing and well-being.</p>
+    </div>
+    <footer>
+      <div class="event__form gridCell--row">
+        <div class="gridCell--col gridCell--half-col">
+          <div class="meta uppercase">
+            <h4 class="meta__item meta__item--headline">
+              December 10th, 11:00am – 12:15pm
+            </h4>
+            <p class="meta__item">
+              <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">The Ideal Method</a> <br />
+              <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/@41.3829587,-81.6580515,14z/">
+                <span class="unbreakable">6595 Brecksville Rd #3</span> <br />
+                <span class="unbreakable">Independence, OH 44131</span>
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="content gridCell--col gridCell--half-col">
+          <p class="inverted">
+            <span class="unbreakable">$20 cash, day of.</span>
+            <br />
+            Pre-registration is required.
+          </p>
+          <p>
+            <a class="callToAction callToAction--compact" target="_blank" href=" https://docs.google.com/forms/d/e/1FAIpQLSfkOFR42rP9sm4himwZr6A45f31GMKyXF3iNKxqUHbn2L3XTQ/viewform">
+              Register Here
+            </a>
+          </p>
+        </div>
+      </div>
+    </footer>
+
+  </article>
 </div>
 
 
