--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
           <span class="unbreakable">Thursdays 12:00 – 1:15pm</span>
         </h3>
         <p class="meta__item">
-          <a class="unbreakable" href="http://www.acendayoga.com">Acenda Yoga</a> <br />
-          <a class="meta__link" href="https://www.google.com/maps/place/17305+Madison+Ave,+Lakewood,+OH+44107/@41.4774351,-81.819285,17z/">
-            <span class="unbreakable">17305 Madison Ave</span> <br />
+          <a class="unbreakable" href="http://www.pinklotusyoga.com/">Pink Lotus Yoga</a> <br />
+          <a class="meta__link" href="https://www.google.com/maps/place/18103+Detroit+Ave,+Lakewood,+OH+44107/">
+            <span class="unbreakable">18103 Detroit Ave</span> <br />
             <span class="unbreakable">Lakewood, OH 44107</span>
           </a>
         </p>
