Update all maps links
Remove the latitude and longitude and link in the yoga nidra workshop

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </h3>
         <p class="meta__item">
           <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">Ideal Wellness</a> <br />
-          <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/@41.3829587,-81.6580515,14z/">
+          <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/">
             <span class="unbreakable">6595 Brecksville Rd #3</span> <br />
             <span class="unbreakable">Independence, OH 44131</span>
           </a>
@@ -115,7 +115,7 @@
         </p>
         <p class="meta__item">
           <a class="unbreakable" href="http://www.centeredwellness.org/Classes-Events.html">Unity Spiritual Center</a> <br />
-          <a class="meta__link" href="https://www.google.com/maps/place/23855+Detroit+Rd,+Westlake,+OH+44145/@41.470471,-81.8930012,15z/">
+          <a class="meta__link" href="https://www.google.com/maps/place/23855+Detroit+Rd,+Westlake,+OH+44145/">
             <span class="unbreakable">23855 Detroit Rd</span> <br />
             <span class="unbreakable">Westlake, OH 44145</span>
           </a>
@@ -228,11 +228,11 @@
             <h4 class="meta__item meta__item--headline">
               November 27th, 10:00 – 11:30am
             </h4>
-            <p class="meta__item">
-              <span class="unbreakable">The Ideal Method</span> <br />
-              <span class="unbreakable">6595 Brecksville Rd. Suite #3</span> <br />
-              <span class="unbreakable">Independence, Oh 44131</span>
-            </p>
+            <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">The Ideal Method</a> <br />
+            <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/">
+              <span class="unbreakable">6595 Brecksville Rd #3</span> <br />
+              <span class="unbreakable">Independence, OH 44131</span>
+            </a>
           </div>
         </div>
         <div class="content gridCell--col gridCell--half-col">
@@ -284,7 +284,7 @@ Combining the therapeutic frequencies and vibrations of sound along with Integra
             </h4>
             <p class="meta__item">
               <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">The Ideal Method</a> <br />
-              <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/@41.3829587,-81.6580515,14z/">
+              <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/">
                 <span class="unbreakable">6595 Brecksville Rd #3</span> <br />
                 <span class="unbreakable">Independence, OH 44131</span>
               </a>
