--- a/index.html
+++ b/index.html
@@ -110,21 +110,33 @@
       <h2 class="headline inverted uppercase program__title">Reiki</h2>
 
       <div class="meta uppercase">
-        <h3 class="meta__item meta__item--headline">
-          <span class="unbreakable">By appointment only</span>
-        </h3>
-        <p class="meta__item">
-          <span class="unbreakable">Evenings and weekends available</span>
+        <p class="meta__item meta__item--headline">
+          <span class="unbreakable">By appointment only &mdash;</span>
+          <span class="unbreakable">flexible times and days.</span>
         </p>
-        <p class="meta__item">
-          <a class="unbreakable" href="http://www.centeredwellness.org/Classes-Events.html">Unity Spiritual Center</a> <br />
-          <a class="meta__link" href="https://www.google.com/maps/place/23855+Detroit+Rd,+Westlake,+OH+44145/">
-            <span class="unbreakable">23855 Detroit Rd</span> <br />
-            <span class="unbreakable">Westlake, OH 44145</span>
+      </div>
+
+      <div class="meta">
+        <h3 class="meta__item meta__item--headline uppercase">
+          <span class="unbreakable">For people</span>
+        </h3>
+        <p class="meta__item uppercase">
+          <a class="unbreakable" href="http://www.rawestheticsstudio.com/">Raw Esthetics</a> <br />
+          <a class="meta__link" href="https://www.google.com/maps/place/18251+Detroit+Extension,+Lakewood,+OH+44107/">
+            <span class="unbreakable">18251 Detroit Extension</span> <br />
+            <span class="unbreakable">Lakewood, OH 44107</span>
           </a>
         </p>
+        <p class="meta__item">First time clients&mdash;save $15 off your first session!</p>
         <p class="meta__item">1 hour healing and relaxation session $75</p>
         <p class="meta__item">Monthly packages are available</p>
+      </div>
+
+      <div class="meta">
+        <h3 class="meta__item meta__item--headline uppercase">
+          <span class="unbreakable">For pets</span>
+        </h3>
+        <p class="meta__item">Contact Renee directly to set up a time and location for an intuitive reiki session for your pet! Great for any animal with training issues, unfavorable habits, health concerns, and general well-being.</p>
       </div>
 
       <div class="content">
