Update yoga times

--- a/index.html
+++ b/index.html
@@ -55,30 +55,41 @@
 
       <h2 class="headline inverted uppercase program__title">Yoga</h2>
 
-      <div class="meta uppercase">
-        <h3 class="meta__item meta__item--headline">
-          <span class="unbreakable">Tuesdays 6:00 – 7:30pm</span>
+      <div class="meta">
+        <h3 class="meta__item meta__item--headline uppercase">
+          <span class="unbreakable">Tuesdays 6:00 – 7:30pm</span><br />
+          <span class="unbreakable">Classes resume January 24th</span>
         </h3>
-        <p class="meta__item">
+        <p class="meta__item uppercase">
           <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">Ideal Wellness</a> <br />
           <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/">
             <span class="unbreakable">6595 Brecksville Rd #3</span> <br />
             <span class="unbreakable">Independence, OH 44131</span>
           </a>
         </p>
+        <p>
+          Pre-registration is required—email
+          <a href="mailto:renee@premahealingcleveland.com">
+            renee@premahealingcleveland.com
+          </a>
+          to attend.
+        </p>
       </div>
 
-      <div class="meta uppercase">
-        <h3 class="meta__item meta__item--headline">
-          <span class="unbreakable">Thursdays 12:00 – 1:00pm</span>
+      <div class="meta">
+        <h3 class="meta__item meta__item--headline uppercase">
+          <span class="unbreakable">Thursdays 12:00 – 1:00pm and</span><br />
+          <span class="unbreakable">Saturdays 8:45 – 9:45am</span>
+          <span class="unbreakable">(beginning January 7th)</span>
         </h3>
-        <p class="meta__item">
+        <p class="meta__item uppercase">
           <a class="unbreakable" href="http://www.pinklotusyoga.com/">Pink Lotus Yoga</a> <br />
           <a class="meta__link" href="https://www.google.com/maps/place/18103+Detroit+Ave,+Lakewood,+OH+44107/">
             <span class="unbreakable">18103 Detroit Ave</span> <br />
             <span class="unbreakable">Lakewood, OH 44107</span>
           </a>
         </p>
+        <p>Drop-ins welcome</p>
       </div>
 
       <div class="content">
