--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="meta">
         <h3 class="meta__item meta__item--headline uppercase">
           <span class="unbreakable">Tuesdays 6:00 – 7:30pm</span><br />
-          <span class="unbreakable">Classes resume January 24th</span>
+          <span class="unbreakable inverted">Classes resume January 24th</span>
         </h3>
         <p class="meta__item uppercase">
           <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">Ideal Wellness</a> <br />
@@ -78,7 +78,7 @@
 
       <div class="meta">
         <h3 class="meta__item meta__item--headline uppercase">
-          <span class="unbreakable">Thursdays 12:00 – 1:00pm and</span><br />
+          <span class="unbreakable">Thursdays 12:00 – 1:00pm</span><br />
           <span class="unbreakable">Saturdays 8:45 – 9:45am</span>
           <span class="unbreakable">(beginning January 7th)</span>
         </h3>
@@ -177,7 +177,7 @@
   <article class="event">
     <header>
       <h2 class="headline inverted">
-        <span class="headline__line">Beginner’s Yoga 5 week course </span>
+        <span class="headline__line">Beginner’s Yoga—5 Week Course </span>
         <span class="headline__line">
           <span class="unbreakable">Saturdays,</span>
           <span class="unbreakable">beginning January 28th,</span>
