Tweak content again

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h3 class="meta__item meta__item--headline uppercase">
           <span class="unbreakable">Thursdays 12:00 – 1:00pm</span><br />
           <span class="unbreakable">Saturdays 8:45 – 9:45am</span>
-          <span class="unbreakable">(beginning January 7th)</span>
+          <span class="unbreakable inverted">(beginning January 7th)</span>
         </h3>
         <p class="meta__item uppercase">
           <a class="unbreakable" href="http://www.pinklotusyoga.com/">Pink Lotus Yoga</a> <br />
